--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/Vid/main.js"></script>
+
+
+    <button id = "webcamButton">Click to turn on webcam</button>
+    <h1>Local Video</h1>
+      <video id = "webcamVideo" autoplay playsinline></video>
+
+    <h1>Remote Video</h1>
+    <video id = "remoteVideo" autoplay playsinline></video> 
+    <button id = "createCallButton">Create Call</button>
+    <button id = "answerCallButton">Answer Call</button>
   </body>
 </html>
